==> redmorningcn/csnc_boot_stm/source/Software/EvalBoards/Micrium/uC-Eval-STM32F107/BSP/BSP1/bsp.c <==
#define  BSP_MODULE
#include <bsp.h>
#define  BSP_LED_START_BIT  (8 - 1)                            /* LEDs[3:1] are sequentially connected to PTD[15:13].  */
#define  DWT_CR      *(CPU_REG32 *)0xE0001000
#define  DWT_CYCCNT  *(CPU_REG32 *)0xE0001004
#define  DEM_CR      *(CPU_REG32 *)0xE000EDFC
#define  DBGMCU_CR   *(CPU_REG32 *)0xE0042004
#define  DBGMCU_CR_TRACE_IOEN_MASK       0x10
#define  DBGMCU_CR_TRACE_MODE_ASYNC      0x00
#define  DBGMCU_CR_TRACE_MODE_SYNC_01    0x40
#define  DBGMCU_CR_TRACE_MODE_SYNC_02    0x80
#define  DBGMCU_CR_TRACE_MODE_SYNC_04    0xC0
#define  DBGMCU_CR_TRACE_MODE_MASK       0xC0
#define  DEM_CR_TRCENA                   (1 << 24)
#define  DWT_CR_CYCCNTENA                (1 <<  0)

void  BSP_Init (void)
{
    /***********************************************
    * 描述： 恢复GPIO及USART为默认参数，防止进入应用程序发生异常
    *        如果，串口有数据，则在进入应用程序后会进入中断产生异常
    */
    /***********************************************
    * 描述： 端口恢复默认
    */
    GPIO_DeInit(GPIOA);
    GPIO_DeInit(GPIOB);
    GPIO_DeInit(GPIOC);
    GPIO_DeInit(GPIOD);
    GPIO_DeInit(GPIOE);
    
    /***********************************************
    * 描述： 串口恢复默认
    */
    USART_DeInit(USART1);
    USART_DeInit(USART2);
    USART_DeInit(USART3);
        
    /***********************************************
    * 描述： 定时器恢复默认
    */
    TIM_DeInit(TIM1);
    TIM_DeInit(TIM2);
    TIM_DeInit(TIM2);
    TIM_DeInit(TIM3);
    TIM_DeInit(TIM4);
    TIM_DeInit(TIM5);
    TIM_DeInit(TIM6);
    TIM_DeInit(TIM7);
    TIM_DeInit(TIM8);

    ADC_DeInit(ADC1);
    ADC_DeInit(ADC2);
    
    BSP_IntInit();
    BSP_GpioInit();
    BSP_RccInit(1,72);

    BSP_CPU_ClkFreq_MHz = BSP_CPU_ClkFreq() / (CPU_INT32U)1000000;

    BSP_CPU_ClkFreq_MHz = BSP_CPU_ClkFreq_MHz;                  /* Surpress compiler warning BSP_CPU_ClkFreq_MHz    ... */
                                                                /* ... set and not used.                                */

    BSP_LED_Init();                                             /* Initialize the I/Os for the LED      controls.       */

    BSP_StatusInit();                                           /* Initialize the status input(s)                       */
        
extern void BSP_Init_Hook(void);    
    BSP_Init_Hook();
    
#ifdef TRACE_EN                                                 /* See project / compiler preprocessor options.         */
    DBGMCU_CR |=  DBGMCU_CR_TRACE_IOEN_MASK;                    /* Enable tracing (see Note #2).                        */
    DBGMCU_CR &= ~DBGMCU_CR_TRACE_MODE_MASK;                    /* Clr trace mode sel bits.                             */
    DBGMCU_CR |=  DBGMCU_CR_TRACE_MODE_SYNC_04;                 /* Cfg trace mode to synch 4-bit.                       */
#endif
}

static  void  BSP_LED_Init (void)
{
    GPIO_InitTypeDef  gpio_init;
        
    RCC_APB2PeriphClockCmd(RCC_LED, ENABLE);

    gpio_init.GPIO_Pin   = BSP_GPIO_LED01 | BSP_GPIO_LED02 ;
    gpio_init.GPIO_Speed = GPIO_Speed_50MHz;
    gpio_init.GPIO_Mode  = GPIO_Mode_Out_PP;
    GPIO_Init(GPIO_LED, &gpio_init);

    BSP_LED_Off(BSP_LED_ALL);
}

void  BSP_LED_On (CPU_INT08U led)
{
    switch (led) {
        case 0:
             GPIO_SetBits(GPIO_LED, BSP_GPIO_LED01);
             GPIO_SetBits(GPIO_LED, BSP_GPIO_LED02);
             break;
        case 1:
             GPIO_SetBits(GPIO_LED, BSP_GPIO_LED01);
             break;
        case 2:
             GPIO_SetBits(GPIO_LED, BSP_GPIO_LED02);
             break;

        default:
             break;
    }
}

void  BSP_LED_Off (CPU_INT08U led)
{
    switch (led) {
        case 0:
             GPIO_ResetBits(GPIO_LED, BSP_GPIO_LED01);
             GPIO_ResetBits(GPIO_LED, BSP_GPIO_LED02);
             break;
        case 1:
             GPIO_ResetBits(GPIO_LED, BSP_GPIO_LED01);
             break;
        case 2:
             GPIO_ResetBits(GPIO_LED, BSP_GPIO_LED02);
             break;

        default:
             break;
    }
}

void  BSP_LED_Toggle (CPU_INT08U led)
{
    CPU_INT32U  pins;


    pins = GPIO_ReadOutputData(GPIO_LED);

    switch (led) {
        case 0:
             BSP_LED_Toggle(1);
             BSP_LED_Toggle(2);
             break;

        case 1:
             if ((pins & BSP_GPIO_LED01) == 0) {
                 GPIO_SetBits   (GPIO_LED, BSP_GPIO_LED01);
             } else {
                 GPIO_ResetBits (GPIO_LED, BSP_GPIO_LED01);
             }
            break;
        case 2:
             if ((pins & BSP_GPIO_LED02) == 0) {
                 GPIO_SetBits   (GPIO_LED, BSP_GPIO_LED02);
             } else {
                 GPIO_ResetBits (GPIO_LED, BSP_GPIO_LED02);
             }
            break;

        default:
             break;
    }
}

static  void  BSP_StatusInit (void)
{
    GPIO_InitTypeDef  GPIO_InitStructure;
    
    /***********************************************
    * 描述： 模块地址选择：0：CSNC A2 / Modbus 2；1：CSNC A2 / Modbus 1
    */
    RCC_APB2PeriphClockCmd(GPIO_RD0_RCC, ENABLE);
    GPIO_InitStructure.GPIO_Pin   = GPIO_RD0_PIN; 
    GPIO_InitStructure.GPIO_Mode  = GPIO_Mode_IPU;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_Init(GPIO_RD0_PROT, &GPIO_InitStructure);
    
    /***********************************************
    * 描述： 模块类型选择：0: 测量模块；1：显示模块
    */
    RCC_APB2PeriphClockCmd(GPIO_RD1_RCC, ENABLE);
    GPIO_InitStructure.GPIO_Pin   = GPIO_RD1_PIN; 
    GPIO_InitStructure.GPIO_Mode  = GPIO_Mode_IPD;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_Init(GPIO_RD1_PROT, &GPIO_InitStructure);
    
    /***********************************************
    * 描述： 通道数量选择：0：双通道；1：单通道
    */
    RCC_APB2PeriphClockCmd(GPIO_RD2_RCC, ENABLE);
    GPIO_InitStructure.GPIO_Pin   = GPIO_RD2_PIN; 
    GPIO_InitStructure.GPIO_Mode  = GPIO_Mode_IPD;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_Init(GPIO_RD2_PROT, &GPIO_InitStructure);
}

CPU_BOOLEAN  BSP_StatusRd (CPU_INT08U  id)
{
    CPU_BOOLEAN  bit_val;

    switch (id) {
        case 1:
             bit_val = (CPU_BOOLEAN)GPIO_ReadInputDataBit(GPIO_RD0_PROT, GPIO_RD0_PIN);
             return (bit_val);

        case 2:
             bit_val = (CPU_BOOLEAN)GPIO_ReadInputDataBit(GPIO_RD1_PROT, GPIO_RD1_PIN);
             return (bit_val);

        case 3:
             bit_val = (CPU_BOOLEAN)GPIO_ReadInputDataBit(GPIO_RD2_PROT, GPIO_RD2_PIN);
             return (bit_val);
             
        default:
             return ((CPU_BOOLEAN)DEF_OFF);
    }
}
