==> digidotcom/cc_ansic/kits/kinetis/ucos/source/ucos-iii/Bsp/TWRK53N512/bsp.c <==
#define  BSP_MODULE
#include <includes.h>
#define  BSP_CPU_CLK_FREQ             50000000ul                /* CPU Clock Frequency.                                 */
#define  BSP_SYSTICK_PERIOD            2000000ul                /* System Tick Timer Period of 2 MHz.                   */
#define  DWT_CR      *(CPU_REG32 *)0xE0001000                   /* Data Watchpoint and Trace (DWT) Control Register     */
#define  DWT_CYCCNT  *(CPU_REG32 *)0xE0001004                   /* Data Watchpoint and Trace (DWT) Cycle Count Register */
#define  DEM_CR      *(CPU_REG32 *)0xE000EDFC
#define  DBGMCU_CR   *(CPU_REG32 *)0xE0042004                   /* Located in the PPB area only.                        */
#define  DBGMCU_CR_TRACE_IOEN_MASK       0x10                   /* Located in the PPB area only.                        */
#define  DBGMCU_CR_TRACE_MODE_ASYNC      0x00                   /* Located in the PPB area only.                        */
#define  DBGMCU_CR_TRACE_MODE_SYNC_01    0x40                   /* Located in the PPB area only.                        */
#define  DBGMCU_CR_TRACE_MODE_SYNC_02    0x80                   /* Located in the PPB area only.                        */
#define  DBGMCU_CR_TRACE_MODE_SYNC_04    0xC0                   /* Located in the PPB area only.                        */
#define  DBGMCU_CR_TRACE_MODE_MASK       0xC0                   /* Located in the PPB area only.                        */
#define  DEM_CR_TRCENA                   (1 << 24)

void  BSP_Init (void)
{
    volatile  CPU_INT08U   dummy;


    WDOG_STCTRLH &= ~WDOG_STCTRLH_WDOGEN_MASK;                  /* Disable the watchdog.                                */

    DWT_CR |= (CPU_INT32U)0x00000001;                           /* Enable Cortex-M4's DWT CYCCNT reg.                   */

    BSP_IntInit();                                              /* Initialize Interrupts.                               */

                                                                /* Setup the System Tick Timer.                         */
    dummy     = SYST_CSR;                                       /* Clear any pending interrupts.                        */
    SYST_RVR  = BSP_SYSTICK_PERIOD;                             /* Set period.                                          */
    SYST_CSR |= SysTick_CSR_CLKSOURCE_MASK;                     /* Clock source - System Clock.                         */
    SYST_CSR |= SysTick_CSR_TICKINT_MASK;                       /* Enable interrupt.                                    */
    SYST_CSR |= SysTick_CSR_ENABLE_MASK;                        /* Start Sys Timer.                                     */

//    SIM_SOPT2 |= SIM_SOPT2_MCGCLKSEL_MASK;                      /* RTC 32 kHz oscillator drives MCG clock.              */

    BSP_CPU_ClkFreq_MHz = BSP_CPU_ClkFreq() / (CPU_INT32U)1000000;
    BSP_CPU_ClkFreq_MHz = BSP_CPU_ClkFreq_MHz;                  /* Surpress compiler warning BSP_CPU_ClkFreq_MHz    ... */
                                                                /* ... set and not used.                                */

    BSP_PLL_Init();                                             /* Initialize the PLL clock.                            */
    
    BSP_LED_Init();                                             /* Initialize the I/Os for the LEDs.                    */

    BSP_TestPointsInit();                                       /* Initialize the I/Os for some Test Points.            */
    
    BSP_StatusInit();                                           /* Initialize the status inputs.                        */

#ifdef TRACE_EN                                                 /* See project / compiler preprocessor options.         */
    DBGMCU_CR |=  DBGMCU_CR_TRACE_IOEN_MASK;                    /* Enable tracing (see Note #2).                        */
    DBGMCU_CR &= ~DBGMCU_CR_TRACE_MODE_MASK;                    /* Clr trace mode sel bits.                             */
    DBGMCU_CR |=  DBGMCU_CR_TRACE_MODE_SYNC_04;                 /* Cfg trace mode to synch 4-bit.                       */
#endif
}

static  void  BSP_LED_Init (void)
{    
    SIM_SCGC5   |= SIM_SCGC5_PORTC_MASK;                        /* Clock Gate Control: Enable the PORT C Clock.         */

    PORTC_PCR7  |= PORT_PCR_SRE_MASK                            /* Slow slew rate.                                      */
                |  PORT_PCR_ODE_MASK                            /* Open Drain Enable.                                   */
                |  PORT_PCR_DSE_MASK;                           /* High drive strength.                                 */
                   
    PORTC_PCR7   = PORT_PCR_MUX(1);                             /* Alternative 1 (GPIO).                                */

    PORTC_PCR8  |= PORT_PCR_SRE_MASK                            /* Slow slew rate.                                      */
                |  PORT_PCR_ODE_MASK                            /* Open Drain Enable.                                   */
                |  PORT_PCR_DSE_MASK;                           /* High drive strength.                                 */
                   
    PORTC_PCR8   = PORT_PCR_MUX(1);                             /* Alternative 1 (GPIO).                                */
    
    GPIOC_PDDR   = BSP_GPIOC_LED_ORANGE                         /* Output enable.                                       */
                |  BSP_GPIOC_LED_YELLOW; 

    BSP_LED_Off(BSP_LED_ALL);                                   /* Turn off all the LEDs.                               */

    PORTC_PCR10 |= PORT_PCR_SRE_MASK                            /* Slow slew rate.                                      */
                |  PORT_PCR_ODE_MASK                            /* Open Drain Enable.                                   */
                |  PORT_PCR_DSE_MASK;                           /* High drive strength.                                 */
                   
    PORTC_PCR10  = PORT_PCR_MUX(1);                             /* Alternative 1 (GPIO).                                */

    PORTC_PCR11 |= PORT_PCR_SRE_MASK                            /* Slow slew rate.                                      */
                |  PORT_PCR_ODE_MASK                            /* Open Drain Enable.                                   */
                |  PORT_PCR_DSE_MASK;                           /* High drive strength.                                 */
                   
    PORTC_PCR11  = PORT_PCR_MUX(1);                             /* Alternative 1 (GPIO).                                */
    
    GPIOC_PDDR  |= DEF_BIT_10                                   /* Output enable.                                       */
                |  DEF_BIT_11;
    
    GPIOC_PSOR   = DEF_BIT_10                                   /* Turn off Motor and Valve.                            */
                |  DEF_BIT_11;
}

void  BSP_LED_On (CPU_INT08U led)
{
    switch (led) {
        case BSP_LED_ALL:
             GPIOC_PCOR = BSP_GPIOC_LED_ORANGE
                        | BSP_GPIOC_LED_YELLOW;
             break;

        case BSP_LED_ORANGE:
             GPIOC_PCOR = BSP_GPIOC_LED_ORANGE;
             break;

        case BSP_LED_YELLOW:
             GPIOC_PCOR = BSP_GPIOC_LED_YELLOW;
             break;

        default:
             break;
    }
}

void  BSP_LED_Off (CPU_INT08U led)
{
    switch (led) {
        case BSP_LED_ALL:
             GPIOC_PSOR = BSP_GPIOC_LED_ORANGE
                        | BSP_GPIOC_LED_YELLOW;
             break;

        case BSP_LED_ORANGE:
             GPIOC_PSOR = BSP_GPIOC_LED_ORANGE;
             break;

        case BSP_LED_YELLOW:
             GPIOC_PSOR = BSP_GPIOC_LED_YELLOW;
             break;

        default:
             break;
    }
}

void  BSP_LED_Toggle (CPU_INT08U led)
{
    switch (led) {
        case BSP_LED_ALL:
             GPIOC_PTOR = BSP_GPIOC_LED_ORANGE
                        | BSP_GPIOC_LED_YELLOW;
             break;

        case BSP_LED_ORANGE:
             GPIOC_PTOR = BSP_GPIOC_LED_ORANGE;
             break;

        case BSP_LED_YELLOW:
             GPIOC_PTOR = BSP_GPIOC_LED_YELLOW;
             break;

        default:
             break;
    }
}

static  void  BSP_StatusInit (void)
{                   
    PORTC_PCR5   = PORT_PCR_MUX(1);                             /* Alternative 1 (GPIO).                                */
    PORTC_PCR5  |= PORT_PCR_PS_MASK;                            /* Internal Pull Up Resitor  Selected.                  */
    PORTC_PCR5  |= PORT_PCR_PE_MASK;                            /* Internal Pull    Resistor Enabled.                   */
    PORTC_PCR5  |= PORT_PCR_PFE_MASK;                           /* Passive Low Pass Filter Enabled.                     */

    PORTC_PCR13  = PORT_PCR_MUX(1);                             /* Alternative 1 (GPIO).                                */
    PORTC_PCR13 |= PORT_PCR_PS_MASK;                            /* Internal Pull Up Resitor  Selected.                  */
    PORTC_PCR13 |= PORT_PCR_PE_MASK;                            /* Internal Pull    Resistor Enabled.                   */
    PORTC_PCR13 |= PORT_PCR_PFE_MASK;                           /* Passive Low Pass Filter Enabled.                     */
}

CPU_BOOLEAN  BSP_StatusRd (CPU_INT08U  id)
{
    CPU_BOOLEAN    bit_val;


    switch (id) {
        case BSP_PB_START:
             if ((GPIOC_PDIR & BSP_GPIOC_PB_START) == BSP_GPIOC_PB_START) {
                 bit_val = DEF_OFF;
             } else {
                 bit_val = DEF_ON;
             }
             return (bit_val);

        case BSP_PB_STOP:
             if ((GPIOC_PDIR & BSP_GPIOC_PB_STOP) == BSP_GPIOC_PB_STOP) {
                 bit_val = DEF_OFF;
             } else {
                 bit_val = DEF_ON;
             }
             return (bit_val);

        default:
             return ((CPU_BOOLEAN)DEF_OFF);
    }
}
